# cuda-benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  run_docker.sh  run_notebook.py
aspt/: measurement_suitesparse.ipynb  measurement_suitesparse.py  measurements.csv  measurements.ipynb
aspt/ppopp19_ae/: compile_GPU_SpMM_ASpT.sh  run_GPU_SpMM_ASpT.sh
aspt/ppopp19_ae/ASpT_SpMM_GPU/: Makefile  shfl_fix.h  sspmm_32.cu
benchmark/: benchmark_plot.ipynb
benchmark/Sputnik/: =0.0.7  Makefile  README.md  benchmark.py  mtx.py  read_mtx.py  rn50_time.csv  rn50_time_bs_128.csv  rn50_time_bs_32.csv  run_jupyter.sh  shit.py
benchmark/aspt/: measurements.csv
cmake/: Dependency.cmake  DetectCluster.cmake
common/: README.md  kernel_wrappers.cu  kernel_wrappers.h
common/utils/: csv_log_io.cc  csv_log_io.h  cuda_utils.h  matrix_utils.h  smtx_io.cc  smtx_io.h
matrices/rn50/magnitude_pruning/0.7/: bottleneck_1_block_group3_2_1.coo_blocked.txt  bottleneck_1_block_group_projection_block_group4.coo_blocked.txt  bottleneck_3_block_group2_1_1.coo_blocked.txt  final_dense.coo_blocked.txt  initial_conv.coo_blocked.txt
matrices/rn50/magnitude_pruning/0.8/: bottleneck_1_block_group3_2_1.coo_blocked.txt  bottleneck_1_block_group_projection_block_group4.coo_blocked.txt  bottleneck_3_block_group2_1_1.coo_blocked.txt  final_dense.coo_blocked.txt  initial_conv.coo_blocked.txt
notebooks/: build_python_bindings.ipynb  lucas_sputnik_plot.ipynb
sputnik/: CMakeLists.txt  Makefile  readme_sputnik.md  test  test.cu.cc
src/: benchmark.py  mtx.py  mtx_stats.py
src/benchmark_cpp/: __init__.py  benchmark_plot.ipynb  kernel_python_bindings.cu  kernel_scipy_wrappers.py  sparse_matrix.py
src/benchmark_cpp/sputnik/: benchmark.py  mtx.py  rn50_timings.csv  run_jupyter.sh
src/utilities/: environment.py
tools/: codlet_multiply.cu  codlet_multiply.cuh  dense_matmul_benchmark.cu  dense_matrix.cuh  kernel_driver.cu  row_similarity.cc  run_kernel.cu  run_kernel.cuh  sparse_resnet_benchmark.cu  sparta_matmul_benchmark.cu  stride_check.cc  synthetic_codlets.cu  synthetic_codlets.cuh
tools/codelet_kernels/: codelet_kernel_4x16x4.cu  codelet_kernel_4x32x1.cu  codelet_kernel_4x8x8.cu  codelet_kernel_8x32x1.cu  codelet_kernel_8x8x4.cu  codelet_kernel_utils.cuh  codelet_kernels.cuh
tools/sparta_kernels/: block_sparse_matmul_3072_4096_16_16_16_4_4_4.cu  sparse_softmax_3072_4096_32_32_2.cu
utilities/: environment.py
